# packet-routing

./: CMakeLists.txt  Plot Load.ipynb  README.md  benchmark.sh  configure  plot.py
.github/workflows/: build-steps.yml
docs/: basics.drawio
evaluation/: benchmark.sh  evaluate.py  evaluate.sh  plot.py
figs/: ranking.txt
figs/0ms/: ranking.txt
figs/1000ms/: ranking.txt
figs/100ms/: ranking.txt
header/: graph_generator.hpp  type_ids.hpp  types.hpp
header/actor/: message_generator.hpp  node.hpp  topology_manager.hpp  transition.hpp
header/actors/: message_generator.hpp  node.hpp  topology_manager.hpp  transition.hpp
header/benchmark/: benchmarker.hpp  result.hpp
header/graph/: edge.hpp  generator.hpp  node.hpp  transition.hpp  undirected_graph.hpp
header/routing/: ant.hpp  entry.hpp  hyperparameters.hpp  message.hpp  policy.hpp  random.hpp  table.hpp
src/: example.cpp  graph_generator.cpp  main.cpp
src/actor/: message_generator.cpp  node.cpp  topology_manager.cpp  transition.cpp
src/actors/: message_generator.cpp  node.cpp  topology_manager.cpp  transition.cpp
src/benchmark/: benchmarker.cpp  result.cpp
src/graph/: edge.cpp  generator.cpp  transition.cpp  undirected_graph.cpp
src/routing/: ant.cpp  entry.cpp  message.cpp  random.cpp  table.cpp
test/: generator.cpp  graph.cpp  message_generator.cpp  packet_routing_test.cpp  transition.cpp
test/actors/: message_generator.cpp  node.cpp  topology_manager.cpp  transition.cpp
test/graph/: generator.cpp  undirected_graph.cpp
test/routing/: ant.cpp  entry.cpp  message.cpp  random.cpp
